Final changes and corrections

--- a/001Cover.tex
+++ b/001Cover.tex
@@ -16,6 +16,7 @@
 \begin{flushleft} \large
 \emph{Author:}\\
 Thomas\textsc{ Heinrichs}\\
+Matr. Nr. \textsc{2017173}
 \end{flushleft}
 \end{minipage}
 \begin{minipage}{0.4\textwidth}
