--- a/005Microservices.tex
+++ b/005Microservices.tex
@@ -1,13 +1,13 @@
 \section{Introduction to Microservice  Architectures}
 \label{sec:techKnowHow}
-This section aims to broadly elaborate the nature of microservices. First, the term will be defined and distinguished between \acrfull{soa}. After having understood the crucial part, the theory and the benefits of self-contained systems are introduced. This chapter will be finished by having a look at event-based microservice collaboration. Its advantages and disadvantages will be shown in that section. 
+This section aims to broadly elaborate the nature of microservices. First, the term will be defined and distinguished between \acrfull{soa}. After having understood that crucial part, the theory and the benefits of self-contained systems are introduced. This chapter will be finished by having a look at event-based microservice collaboration. Its advantages and disadvantages will be shown within the section. 
 
 \subsection{Distinction Between SOA and Microservice Architectures}
 Microservice architecture is a commonly used buzzword for a modern way of implementing software. Looking into data from Google Trends, it is possible to see that the popularity of this approach has been increasing dramatically since 2014. \cite{microservices}\newline
 \\
 A monolithic application which grew over time often leads to poor maintainability and high complexity. To avoid this, the architecture needs to be de-serialised into multiple services, which results in a service oriented architecture (SOA). But due to recent development it seems that SOA will be replaced by microservice architectures more often.\cite{mircorVSsoa}\newline
-Both of those methodologies suggest the decomposition of software. Therefore, SOA focuses on integrating those services for the entire company within a centralised management and governance. Microservices instead focus on decomposing services without global governance. This results in higher autonomy and decoupling. \cite{mircorVSsoa} A communication over REST via HTTPS, RPC or CORBA is chosen quite often.\newline
-Furthermore, the coupling between the different services is considered to be low. This allows multiple development teams to work on distinct components without affecting each other. Overall it is possible to see that those teams are enabled to build and adapt components faster than with monolithic solutions. Additionally,  modern IT environments often use DevOps which can embrace their full potential of constant iteration and delivery (\acrshort{ci/cd}) within a microservice  world. \cite{redHatMicroservices}\newline
+Both of those methodologies suggest the decomposition of software. Therefore, SOA focuses on integrating those services for the entire company within a centralised management and governance. Microservices instead, focus on decomposing services without global governance. This results in higher autonomy and decoupling. \cite{mircorVSsoa} A communication over REST via HTTPS, RPC or CORBA is chosen quite often.\newline
+Furthermore, the coupling between the different services is considered to be low. This allows multiple development teams to work on distinct components without affecting each other. Overall it is possible to see that those teams are enabled to build and adapt components faster than with monolithic solutions. Additionally,  modern IT environments often use DevOps which can embrace their full potential of constant integration and delivery (\acrshort{ci/cd}) within a microservice  world. \cite{redHatMicroservices}\newline
 \\
 Next to the benefits, there are also challenges to face while moving to a decomposed architecture. Brian Atkisson, a Senior Principal Systems Engineer at Red Hat, introduces eight of them. 
 \begin{itemize}
