--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -1,6 +1,6 @@
 \section{Combination into a Process-Driven Semi-Event-Based Micro-service DWS}
 \label{sec:finalArchitecture}
-After having introduced the basic technologies, this section aims to combine those into the process-driven semi-event-based microservice architecture for data warehouse systems. The focus will be generic and lies within the interaction between multiple components. There will not be any detailed choice of various processes or products. To verify its usability and feasibility, an evaluation from industrial point of view will be appended. This will be achieved by interviewing a technical expert.
+After having introduced the basic technologies, this section aims to combine those into the process-driven semi-event-based microservice architecture for data warehouse systems. The focus will be generic and lies within the interaction between multiple components. There will not be any detailed choice of various processes or products. To verify its usability and feasibility, an evaluation from industrial point of view will be appended. This will be achieved by interviewing technical experts.
 
 \subsection{Introducing the Process-Driven Semi-Event-Based Microservice Approach for Data Warehouse Systems}
 \begin{figure}[!htb]
@@ -11,30 +11,30 @@ After having introduced the basic technologies, this section aims to combine tho
 \end{figure}
 Figure \ref{fig:resultingArch} shows the resulting architecture. In the next paragraph we will have a more detailed summary of the components and their interactions. As one might already see, the architecture is similar to Inmon's hub and spoke approach but provides several important adaptions as well. \newline
 \\
-Starting off with the data warehouse manager which contains a BPMN workflow engine used for the orchestration of the whole system.  Additionally, all information of the process flow is stored and maintained within this component.\newline
-While talking about this component it is also worth mentioning, that a goal could be to have a generalised data warehousing BPMN process in the future. This could furthermore be adapted by the needs of each user. Since most of the time the process is quite deterministic and straight-forward this could lead to some advantages in this area. Even tho since individual changes are easily designed within this notation. \newline
+Starting off with the data warehouse manager which contains a BPMN workflow engine used for the orchestration of the whole system. Additionally, all information of the process flow is stored and maintained within this component.\newline
+It is also worth mentioning, that a goal could be to develop a generalised data warehousing BPMN process based on this paper in the future.  Still this one should be adaptive to the needs of each user. Since most of the time the process is quite deterministic and straight-forward this could lead to some advantages in this area. Even tho, since individual changes are easily designed within this notation. \newline
 \\
 Next, let us focus at the service cluster for data extraction. It contains microservices as SCS which are controlled via the data warehouse manager. As shown in the diagram, each service has its own database. Typically, in the extraction layer the staging area is used as temporary data storage.  It can be thought of having distinct services depending on the input format. Nevertheless, there are multiple other possibilities about how to split up this component. As mentioned within chapter \ref{sec:techKnowHow} it is recommended to slice the services along the process which is defined within the BPMN diagram. Since this part of the process can be implemented quite generic there might not be any department specific services at all.\newline
 \\
 Besides of that, the transformation services are orchestrated by the workflow engine as well. They get cascaded as needed within the BPMN diagrams. As shown in the cluster, data cleaning, cleansing and enhancement is provided. This cluster might already contain some department specific services, especially when thinking about various possibilities for the data enrichment.\newline
-These self-contained systems will hand over the data into a CDW component which stores the historical data.\newline
+These self-contained systems will hand over their data into a CDW component which stores the historical data. The CDW component furthermore acts as single source of truth.\newline
 \\
-In the cluster for analytical services, there are multiple instances which are used to extract and store a subset of data within data marts. Due to the orchestration done by BPM, it is possible to cascade multiple services in order to make department specific analysis possible. Furthermore, the information will be shared via a message broker or event bus system with various consumers which are often run by departments. As shown within the picture, it would be possible to use \acrshort{bi} self-services like Grafana or Tableau to generate reports from that information.\newline
-Due to the usage of individual analytical services generating reports one could say that the overall overview gets lost and functional silos are created. This is where the message broker takes effect. Since all metrics are shared over this bus it is possible to aggregate those back to an overall report again. By having this transparency within a management information system it is easy to keep track over several business areas. \newline
+In the cluster for analytical services, there are multiple instances which are used to extract and store a subset of data within data marts. Due to the orchestration done by BPM, it is possible to cascade multiple services in order to make department specific analysis possible. Afterwards, the information will be shared via a message broker or event bus system with various consumers, often run by departments. As shown within the picture, it would be possible to use \acrshort{bi} self-services like Grafana or Tableau to generate reports from that information.\newline
+Due to the usage of individual analytical services generating reports, one could say that the overall overview gets lost and functional silos are created. This is where the message broker takes effect. Since all metrics are shared over this bus system it is possible to aggregate those back to an overall report. By having this transparency within a management information system it is easy to keep track over several organisational areas. \newline
 \\
 \\
 After having introduced the distinct clusters let us focus at the technological changes within those. Especially looking on important aspects like scalability as well as data persistence.\newline
-The SCS approach allows us not only to have loosely coupled services but also to gain advantages through scalability. For each process instance which is created a new instance of this service can be created. Depending on the implementation within the DW-Manager such instance can be created each time the monitoring component of a data source triggers the process. Furthermore in terms of failure-safety and routing it makes sense to make use of a container-orchestration infrastructure system like Kubernetes. This would make deployment and management of such a system a lot easier.\newline 
-Talking about the SCS approach it is worth mentioning that distinct teams are able to work upon services without running into conflicting dependencies. Due to their freedoms the development teams even are faster and more flexible within their technological choices.\newline
-The technological freedom leads to the next topic of data persistence. As shown in section \ref{sec:dataHandling} multidimensional or relational OLAP is often used. While having Self-Contained-Systems the user or developer has a free choice to choose a technology of his choice without affecting the whole system. Especially nowadays NoSQL databases gain in importance. Some good examples for analytical queryable data structures are graph- as well as object databases. 
+The SCS approach allows us not only to have loosely coupled services but also to gain advantages through scalability. For each process instance a new service instance can be created. Depending on the implementation within the DW-Manager such instance can be created each time the monitoring component of a data source triggers the process. Furthermore in terms of failure-safety and routing it makes sense to make use of a container-orchestration infrastructure system like Kubernetes. This would make deployment and management a lot easier.\newline 
+Talking about the SCS approach, it is worth mentioning that distinct teams are able to work on services without running into conflicting dependencies. Due to their freedom, development teams are even faster and more flexible within their technological choices.\newline
+This freedom leads to the topic of data persistence. As shown in section \ref{sec:dataHandling} multidimensional or relational OLAP is often used. While having Self-Contained-Systems the user or developer has a free choice to use a technology of his choice without affecting the whole system. Especially nowadays NoSQL databases gain in importance. Some good examples for analytical queryable data structures are graph- as well as object databases. 
 \\
 \\
-In conclusion, the key features are contained within the SCS approach to DWS, the process-driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principles the overall systems get more adaptive in terms of customer needs. The overall development and dependency management gets easier and faster. \newline
-But this approach also provides some challenges. One difficulty can be found within the data consistency that all analytical services need to provide. While the storage format can be distinct within each service the basis of data needs to be consistent. Otherwise it won't be possible to aggregate multiple reports into one. At worst multiple services would lead to distinct results which will cause a loss of trust. Due to this it is important keep this challenge in mind while implementing such a solution. \newline
-In order to keep track upon the services and their documentation I would empathise to have an overall system architect guiding the development of the overall data warehouse. Otherwise outdated documentation or miscommunication can lead to the development of multiple services with similar or even same purposes. 
+In conclusion, the key features are contained within the SCS approach to DWS, the process-driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principles the overall systems gets more adaptive in terms of customer needs. The overall development and dependency management gets easier and faster. \newline
+But this approach also provides some challenges. One difficulty can be found within the data consistency that all analytical services need to provide. While the storage format can be distinct within each service the basis of data need to be consistent. Otherwise it will not be possible to aggregate multiple reports into one overall. At worst multiple services would lead to distinct results which will cause a loss of trust. Due to this it is important keep this challenge in mind while implementing such a solution. \newline
+In order to keep track upon the services and their documentation I would empathise to have a system architect guiding the development of the overall data warehouse. Otherwise outdated documentation or miscommunication can lead to the development of multiple services with similar or even same purposes. 
 
 \subsection{Evaluation of this Architecture from an industrial Point of View}
-To verify the feasibility, the purpose and the improvements of this approach in contrast to the presented ones in chapter \ref{sec:referenceArchitecture} and \ref{sec:otherArchitectures} an interview is conducted. Before introducing the outcome guidelines and candidates need to be defined and chosen.
+To verify the feasibility, the purpose and the improvements of this approach in contrast to the presented ones in chapter \ref{sec:referenceArchitecture} and \ref{sec:otherArchitectures} an interview is conducted. Before introducing the outcome, guidelines and candidates need to be defined and chosen.
 
 \subsubsection{Guidelines for the Interview}
 These guidelines aim to define questions which should be answered by consulted experts. The overall aim is to ensure the benefits of this approach as well as en-lighting some weaknesses. 
@@ -59,5 +59,5 @@ The microservice design results in simpler components, but lifts more complexity
 For future work it is definitely worth implementing a proof of concept to show the strength of  this approach. Due to the success of a lot of other migrations from monolithic to distributed architectures, it can be expected to be more flexible and performant.'' \cite{hanno}\newline
 \\
 After having conducted an interview with Dirk Nitsche in person the outcome will be summarised below:\newline
-He stated that especially since the data warehousing process is deterministic by nature the usage of BPMN and a process engine for orchestration is beneficial on paper. To testify the practical purpose of this architecture a prototype would be needed. Especially when considering inconsistent data states in various SCS. 
+He stated that especially since the data warehousing process is deterministic by nature, the usage of BPMN and a process engine for orchestration is beneficial on paper. To testify the practical purpose of this architecture a prototype would be needed. Especially when considering inconsistent data states in various SCS. 
 \cite{dirk}\newline
