--- a/008Conclusion.tex
+++ b/008Conclusion.tex
@@ -6,4 +6,4 @@ In order to conclude the output of this paper, lets head back to the hypothesis 
 As shown in the derivation as well as the expert interview, it can be stated that this approach to DWS delivers improvements regarding individual enhancements. Due to the process driven approach a transparent flow is given, which is easily adaptable. Making use of SCS, it is possible to have multiple teams focusing on specific components which will enable them to deliver faster. By having clusters of microservices along the data warehousing process, the components from Inmon's hub and spoke architecture can be mapped. Nevertheless, departments have the freedom of retrieving information for their needs by having them delivered via a bus system as stated in Kimball's approach.\newline
 Due to this, the advantages of both approaches are combined within a state of the art architecture. \newline
 \\
-Since this paper's outcome is only theoretical and not underlined with a proof of concept, it would be interesting to see some prototype in the future. While doing so, the approach can be refined in further detail. Especially since no suggestions regarding the characteristics of the data storage have been made. In this area, it would be interesting to see if NoSQL databases can replace typical relational ones. As it can be seen, there is still a lot of refinement which needs to go along with a prototype development.
+Since this paper's outcome is only theoretical and not underlined with a proof of concept, it would be interesting to see some prototype in the future. While doing so, the approach can be refined in further detail. Especially since no suggestions regarding the characteristics of the data storage have been made. In this area, it would be interesting to see if NoSQL databases can replace typical relational ones. Additionally a generic process description in BPM for DWS systems would be interesting to see in the future. As it can be seen, there is still a lot of refinement which needs to go along with a prototype development.
