--- a/004StateOfTheArtDWS.tex
+++ b/004StateOfTheArtDWS.tex
@@ -12,27 +12,27 @@ After having explained the reference architecture from A. Bauer, which implement
     \caption{Distributed Data Warehousing Architecture by Ralph Kimball \cite{surveyDWSArchs}}
     \label{fig:distributedWarehouseArchitecture}
 \end{figure}
-\\In contrast to Inmon's approach, Kimball allows ''Everyone [...] to fabricate their database according to their requirements and department structures. All theixre independent repositories can be integrated as and when. [...]'' \cite{surveyDWSArchs}. Due to the fact that the Central / core data warehouse results from those individual data marts and doesn't provide any consistency. This technique is also known as bottom-up approach for developing data warehouse Systems. Since the bus system is needed to ensure the interoperability between multiple data marts and the core data warehouse consistent data standards are therefore needed. Hence, the design aspects are quite tough and the complexity is high. \cite{KimbalVSInmon}\newline
+\\In contrast to Inmon's approach, Kimball allows ''Everyone [...] to fabricate their database according to their requirements and department structures. All their independent repositories can be integrated as and when. [...]'' \cite{surveyDWSArchs}. Due to the fact that the central / core data warehouse results from those individual data marts it does not provide any consistency. This technique is also known as bottom-up approach for developing data warehouse systems. Since the bus system is needed to ensure the interoperability between multiple data marts and the core data warehouse consistent data standards are needed. Hence, the design aspects are quite tough and the complexity is high. \cite{KimbalVSInmon}\newline
 As Breslin states, ''Kimball's approach is a departure from traditional database development'' \cite[p.~19]{KimbalVSInmon} and therefore targets the IT professional himself.\newline
 
 \subsection{Architectural Classification According to the Arrangement of Data Marts}
 Next to the radical redesign of the hub and spoke architecture by Kimball's distributed data warehousing architecture, some alternatives regarding the organisation of data marts will be shown.\newline
 \\
-A central data warehouse consists of a single central instance with only one data mart which is used for all the analysis. This can be beneficial when a company-wide overview is needed. On the downside, it is only possible to apply one data model to this data mart. For department-specific analysis this results into a huge problem. \newline
-Instead, a distributed data warehouse consists of multiple data marts which are specific to the department. Each of this additional data storages has a separate schema. Hence, the creation of a new one results in more work. One problem is the company-wide perspective, which will get lost. \newline
+A central data warehouse consists of a single central instance with only one data mart. This one is used for all the analysis. This can be beneficial when a company-wide overview is needed. On the downside, it is only possible to apply one data model to this data mart. For department-specific analysis this results into a huge problem. \newline
+Instead, a distributed data warehouse consists of multiple data marts which are specific to the department. Each of this additional data storage has a separate schema. Hence, the creation of a new one results into more work. One problem is the company-wide perspective, which will get lost. \newline
 A possible combination of the advantages from the two architectures above can be found in a central data warehouse with multiple distributed data marts. By applying this concept, it is possible to run company-wide analysis on the central data warehouse and to use data marts for the individual needs coming from various departments.
 \newline
 A last aspect which needs to be pointed out is the design aspects of dependent and independent data marts. Therefore, let us first have a look at dependent ones. Those are built on the core data warehouse and might contain additional or aggregated information. Nevertheless, the underlying \acrshort{cdw} ensures a consistency of the information distributed to the data marts. An independent data mart won't have such layer beneath. Due to that, the information inside might be duplicated and distinct to a certain degree. An advantage of using an independent architecture is the simplicity of creating these. \cite{scriptRasch} \newline
 \\
-This section has shown the various design possibilities of data marts inside a corporate data warehouse System. By thinking about a modern adaption of DWS architectures, it is necessary to construct new data marts easily without losing the company-wide point of view and still enable departments to come up with their own requirements for analysis. 
+This section has shown the various design possibilities of data marts inside a corporate data warehouse system. By thinking about a modern adaption of DWS architectures, it is necessary to construct new data marts easily without losing the company-wide point of view and still enable departments to come up with their own requirements for analysis. 
 
 \subsection{Options Regarding the Persistent Data Handling}
 \label{sec:dataHandling}
-After having introduced various structural options above, let us face the topic of data persistence in current data warehouse Systems.
+After having introduced various structural options above, let us face the topic of data persistence in current data warehouse systems.
 All layers inside the DWS can be created with virtual data or with their own data persistence. For instance, it is possible to have a complete virtual DWS. \cite{sinz}\newline
 \\
-For now, let us start off with the ETL layer. It is quite common to have persistence inside the staging area which is used as temporal data storage. Especially during the data transformation, this can be quite beneficial. Besides, it is possible to use an \acrfull{ods} which was introduced by Inmon as ''an operational data store is a subject-oriented, integrated, volatile, current-valued, detailed-only collection of data in support of an organisations need for up-to-the-second, operational, integrated, collective information'' \cite{buildingTheDWS} This storage uses the result of the data transformation and integration to publish it in such an ODS to have real-time-data available in the DWS.\newline
-In concern of data historicisation, the persistence can be contained in the supply area (e.g. data marts) or the CDW, which can be seen as a component for historising the data. Depending on the technologies which are used (e.g. \acrshort{olap} or \acrshort{rolap}), there are multiple recommendations which get elaborated in Sinz's article on the architecture for data warehouse Systems.
+For now, let us start off with the ETL layer. It is quite common to have persistence inside the staging area which is used as temporal data storage. Especially during the data transformation, this can be quite beneficial. Besides, it is possible to use an \acrfull{ods} which was introduced by Inmon as ''an operational data store is a subject-oriented, integrated, volatile, current-valued, detailed-only collection of data in support of an organisations need for up-to-the-second, operational, integrated, collective information''. \cite{buildingTheDWS} This storage uses the result of the data transformation and integration to publish it in such an ODS to have real-time-data available in the DWS.\newline
+In concern of data historicisation, the persistence can be contained in the supply area (e.g. data marts) or the CDW, which can be seen as a component for historising the data. Depending on the technologies which are used (e.g. \acrshort{olap} or \acrshort{rolap}), there are multiple recommendations which get elaborated in Sinz's article on the architecture for data warehouse systems.
 \begin{itemize}
     \item If a relational (\acrshort{sql}) interface is used it is sufficient to persist the data in the core data warehouse.
     \item While using multidimensional OLAP tools, it is common to store the information inside the supply area of the DWS.
